--- a/Sheaft.Web.Manage/Views/Tags/Edit.cshtml
+++ b/Sheaft.Web.Manage/Views/Tags/Edit.cshtml
@@ -11,60 +11,72 @@
 
 }
 
-    <div class="container">
-        <h2 class="display-4">Tag details @(Model.RemovedOn.HasValue ? "(removed)":"")</h2>
+<div class="container">
+    <h2 class="display-4">Tag details @(Model.RemovedOn.HasValue ? "(removed)":"")</h2>
+    <br />
+
+    @using (Html.BeginForm("Edit", "Tags", FormMethod.Post, new { @class = "form", enctype = "multipart/form-data" }))
+    {
+        @Html.AntiForgeryToken()
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        @Html.HiddenFor(model => model.Id)
         <br />
 
-        @using (Html.BeginForm("Edit", "Tags", FormMethod.Post, new { @class = "form", enctype = "multipart/form-data" }))
-        {
-            @Html.AntiForgeryToken()
-            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-            @Html.HiddenFor(model => model.Id)
-            <br />
-
-            <div class="form-group">
-                @Html.LabelFor(m => m.Name)
-                @Html.TextBoxFor(m => m.Name, null, new { @class = "form-control" })
-            </div>
-            <div class="form-group">
-                @Html.LabelFor(m => m.Kind)
-                @Html.DropDownListFor(c => c.Kind, kinds, new { @class = "form-control" })
-            </div>
-            <div class="form-group">
-                @Html.LabelFor(c => c.Picture, new { @class = "form-label" })
-                @if (!string.IsNullOrWhiteSpace(Model.Picture))
-                {
-                    <img src="@Model.Picture" height="100" />
-                }
-                @Html.TextBoxFor(c => c.Picture, new { @class = "form-control", @type = "file" })
-            </div>
-            <div class="form-group">
-                @Html.LabelFor(m => m.Description)
-                @Html.TextAreaFor(m => m.Description, new { @class = "form-control" })
-            </div>
-            <div class="form-group">
-                @Html.LabelFor(m => m.CreatedOn)
-                @Html.TextBoxFor(m => m.CreatedOn, null, new { @class = "form-control", @disabled = "disabled" })
-            </div>
-            <div class="form-group">
-                @Html.LabelFor(m => m.UpdatedOn)
-                @Html.TextBoxFor(m => m.UpdatedOn, null, new { @class = "form-control", @disabled = "disabled" })
-            </div>
-            @if (Model.RemovedOn.HasValue)
+        <div class="form-group">
+            @Html.LabelFor(m => m.Name)
+            @Html.TextBoxFor(m => m.Name, null, new { @class = "form-control" })
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(m => m.Kind)
+            @Html.DropDownListFor(c => c.Kind, kinds, new { @class = "form-control" })
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(c => c.Picture, new { @class = "form-label" })
+            @if (!string.IsNullOrWhiteSpace(Model.Picture))
             {
-                <div class="form-group">
-                    @Html.LabelFor(m => m.RemovedOn)
-                    @Html.TextBoxFor(m => m.RemovedOn, null, new { @class = "form-control", @disabled = "disabled" })
-                </div>
+                <img src="@Model.Picture" height="100" />
             }
-
-            <br />
-            <a asp-controller="Tags" asp-action="Index" class="btn btn-light">
-                Cancel
-            </a>
-            <button type="submit" class="btn btn-success">
-                <i class="fa fa-check">&nbsp;Save</i>
-            </button>
+            @Html.TextBoxFor(c => c.Picture, new { @class = "form-control", @type = "file" })
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(c => c.Icon, new { @class = "form-label" })
+            @if (!string.IsNullOrWhiteSpace(Model.Icon))
+            {
+                <img src="@Model.Icon" height="100" />
+            }
+            @Html.TextBoxFor(c => c.Icon, new { @class = "form-control", @type = "file" })
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(m => m.Description)
+            @Html.TextAreaFor(m => m.Description, new { @class = "form-control" })
+        </div>
+        <div class="form-check">
+            @Html.CheckBoxFor(m => m.Available, new { @class = "form-check-input" })
+            @Html.LabelFor(m => m.Available, new { @class = "form-check-label" })
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(m => m.CreatedOn)
+            @Html.TextBoxFor(m => m.CreatedOn, null, new { @class = "form-control", @disabled = "disabled" })
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(m => m.UpdatedOn)
+            @Html.TextBoxFor(m => m.UpdatedOn, null, new { @class = "form-control", @disabled = "disabled" })
+        </div>
+        @if (Model.RemovedOn.HasValue)
+        {
+            <div class="form-group">
+                @Html.LabelFor(m => m.RemovedOn)
+                @Html.TextBoxFor(m => m.RemovedOn, null, new { @class = "form-control", @disabled = "disabled" })
+            </div>
         }
 
-    </div>
+        <br />
+        <a asp-controller="Tags" asp-action="Index" class="btn btn-light">
+            Cancel
+        </a>
+        <button type="submit" class="btn btn-success">
+            <i class="fa fa-check">&nbsp;Save</i>
+        </button>
+    }
+
+</div>
