--- a/Sheaft.Web.Manage/Views/Agreements/Index.cshtml
+++ b/Sheaft.Web.Manage/Views/Agreements/Index.cshtml
@@ -65,7 +65,6 @@
     <table class="table table-hover">
         <thead class="thead-dark">
             <tr>
-                <th scope="col">Id</th>
                 <th scope="col">Producer</th>
                 <th scope="col">Store</th>
                 <th scope="col">Status</th>
@@ -78,8 +77,7 @@
             @foreach (var entity in Model)
             {
                 <tr>
-                    <th scope="row">@entity.Id</th>
-                    <td>
+                    <th scope="row">
                         @entity.Delivery.Producer.Name
 
                         @if (!imperonatingId.HasValue)
@@ -91,7 +89,7 @@
                                 </button>
                             }
                         }
-                    </td>
+                    </th>
                     <td>
                         @entity.Store.Name
 
