Fix - Correction de l'interface de gestion des produits pour Manage

--- a/Sheaft.Web.Manage/Views/Products/Edit.cshtml
+++ b/Sheaft.Web.Manage/Views/Products/Edit.cshtml
@@ -2,6 +2,7 @@
 @{
     ViewData["Title"] = "Product details";
     var vats = new List<SelectListItem> {
+        new SelectListItem("0%", "0"),
         new SelectListItem("5.5%", "5.5"),
         new SelectListItem("10%", "10"),
         new SelectListItem("20%", "20"),
