--- a/Sheaft.Web.Manage/Views/Products/Edit.cshtml
+++ b/Sheaft.Web.Manage/Views/Products/Edit.cshtml
@@ -22,6 +22,7 @@
         new SelectListItem("Boite", ConditioningKind.Box.ToString("G")),
         new SelectListItem("Poids", ConditioningKind.Bulk.ToString("G")),
         new SelectListItem("Botte", ConditioningKind.Bunch.ToString("G")),
+        new SelectListItem("Pièce", ConditioningKind.Piece.ToString("G")),
         new SelectListItem("Inconnu", ConditioningKind.Not_Specified.ToString("G")),
     };
 
