#DLF-162 - Possibilité de renseigner un Nom commercial

--- a/Sheaft.Web.Manage/Views/Producers/Edit.cshtml
+++ b/Sheaft.Web.Manage/Views/Producers/Edit.cshtml
@@ -20,7 +20,7 @@
             <div class="col-md-6">
                 <h4>Information</h4>
                 <div class="form-group">
-                    @Html.LabelFor(c => c.Name, new { @class = "form-label" })
+                    @Html.LabelFor(c => c.Name, "Nom commercial", new { @class = "form-label" })
                     @Html.TextBoxFor(c => c.Name, null, new { @class = "form-control" })
                 </div>
                 <div class="form-group">
