--- a/Sheaft.Web.Manage/Views/Producers/UpdateLegal.cshtml
+++ b/Sheaft.Web.Manage/Views/Producers/UpdateLegal.cshtml
@@ -31,6 +31,10 @@
             <div class="col-md-6">
                 <h3>Company</h3>
                 <div class="form-group">
+                    @Html.LabelFor(m => m.Name, "Raison sociale")
+                    @Html.TextBoxFor(m => m.Name, null, new { @class = "form-control" })
+                </div>
+                <div class="form-group">
                     @Html.LabelFor(m => m.Email)
                     @Html.TextBoxFor(m => m.Email, null, new { @class = "form-control" })
                 </div>
