--- a/Sheaft.Web.Manage/Views/Declarations/AddUbo.cshtml
+++ b/Sheaft.Web.Manage/Views/Declarations/AddUbo.cshtml
@@ -67,7 +67,7 @@
             </div>
         </div>
         <br />
-        <a asp-controller="Declarations" asp-action="Details" asp-route-id="@ViewBag.DeclarationId" class="btn btn-light">
+        <a asp-controller="Declarations" asp-action="Edit" asp-route-id="@ViewBag.DeclarationId" class="btn btn-light">
             Go back
         </a>
         <button type="submit" class="btn btn-success">
