--- a/Sheaft.Web.Manage/Views/Declarations/Edit.cshtml
+++ b/Sheaft.Web.Manage/Views/Declarations/Edit.cshtml
@@ -99,7 +99,7 @@
         </div>
     </div>
     <br />
-    <a asp-controller="Producers" asp-action="UpdateLegal" asp-route-userid="@ViewBag.UserId" class="btn btn-light">
+    <a asp-controller="Legals" asp-action="EditUserLegals" asp-route-userId="@Model.Id" class="btn btn-info">
         Go back
     </a>
 </div>
