--- a/Sheaft.Web.Manage/Views/Documents/Create.cshtml
+++ b/Sheaft.Web.Manage/Views/Documents/Create.cshtml
@@ -34,11 +34,11 @@
         </div>
 
         <br />
-        <a asp-controller="Producers" asp-action="UpdateLegal" asp-route-id="@ViewBag.LegalId" class="btn btn-light">
-            Go back
-        </a>
-        <button type="submit" class="btn btn-success">
-            <i class="fa fa-plus">&nbsp;Create</i>
-        </button>
-    }
-</div>
+            <a asp-controller="Legals" asp-action="Edit" asp-route-id="@ViewBag.LegalId" class="btn btn-light">
+                Go back
+            </a>
+            <button type="submit" class="btn btn-success">
+                <i class="fa fa-plus">&nbsp;Create</i>
+            </button>
+            }
+    </div>
