--- a/Sheaft.Web.Manage/Views/Declarations/EditUbo.cshtml
+++ b/Sheaft.Web.Manage/Views/Declarations/EditUbo.cshtml
@@ -76,7 +76,7 @@
             @Html.TextBoxFor(c => c.UpdatedOn, null, new { @class = "form-control" })
         </div>
         <br />
-        <a asp-controller="Declarations" asp-action="Details" asp-route-id="@ViewBag.DeclarationId" class="btn btn-light">
+        <a asp-controller="Declarations" asp-action="Edit" asp-route-id="@ViewBag.DeclarationId" class="btn btn-light">
             Go back
         </a>
         <button type="submit" class="btn btn-success">
