--- a/Sheaft.Web.Manage/Views/Declarations/Index.cshtml
+++ b/Sheaft.Web.Manage/Views/Declarations/Index.cshtml
@@ -7,7 +7,7 @@
 }
 
 <div class="container">
-    <h2 class="display-5">DeliveryModes</h2>
+    <h2 class="display-5">Declarations</h2>
     <br />
 
     <table class="table table-hover">
