--- a/Sheaft.Web.Manage/Views/Donations/Edit.cshtml
+++ b/Sheaft.Web.Manage/Views/Donations/Edit.cshtml
@@ -1,10 +1,10 @@
-﻿@model TransferViewModel
+﻿@model DonationViewModel
 @{
-    ViewData["Title"] = "Transfer details";
+    ViewData["Title"] = "Donation details";
 }
 
     <div class="container">
-        <h2 class="display-4">Transfer details</h2>
+        <h2 class="display-4">Donation details</h2>
         <br />
         <br />
         <div class="form-group">
@@ -18,15 +18,6 @@
         <div class="form-group">
             @Html.LabelFor(m => m.UpdatedOn)
             @Html.TextBoxFor(m => m.UpdatedOn, null, new { @class = "form-control", @disabled = "disabled" })
-        </div>
-        <h4>From</h4>
-        <div class="form-group">
-            @Html.LabelFor(m => m.DebitedUser.Name)
-            @Html.TextBoxFor(m => m.DebitedUser.Name, null, new { @class = "form-control", @disabled = "disabled" })
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(m => m.Debited)
-            @Html.TextBoxFor(m => m.Debited, null, new { @class = "form-control", @disabled = "disabled" })
         </div>
         <h4>To</h4>
         <div class="form-group">
@@ -54,27 +45,22 @@
             @Html.LabelFor(m => m.ResultMessage)
             @Html.TextBoxFor(m => m.ResultMessage, null, new { @class = "form-control", @disabled = "disabled" })
         </div>
-        <h4>Purchase Order</h4>
+        <h4>Order</h4>
         <div class="form-group">
-            @Html.LabelFor(m => m.PurchaseOrder.Reference)
-            @Html.TextBoxFor(m => m.PurchaseOrder.Reference, null, new { @class = "form-control", @disabled = "disabled" })
+            @Html.LabelFor(m => m.Order.Identifier)
+            @Html.TextBoxFor(m => m.Order.Identifier, null, new { @class = "form-control", @disabled = "disabled" })
         </div>
         <div class="form-group">
-            @Html.LabelFor(m => m.PurchaseOrder.TotalOnSalePrice)
-            @Html.TextBoxFor(m => m.PurchaseOrder.TotalOnSalePrice, null, new { @class = "form-control", @disabled = "disabled" })
+            @Html.LabelFor(m => m.Order.Status.ToString("G"))
+            @Html.TextBoxFor(m => m.Order.Status.ToString("G"), null, new { @class = "form-control", @disabled = "disabled" })
         </div>
         <div class="form-group">
-            @Html.LabelFor(m => m.PurchaseOrder.Status.ToString("G"))
-            @Html.TextBoxFor(m => m.PurchaseOrder.Status.ToString("G"), null, new { @class = "form-control", @disabled = "disabled" })
-        </div>
-        <h4>Purchase Order</h4>
-        <div class="form-group">
-            <a asp-controller="Orders" asp-action="Details" asp-route-id="@Model.PurchaseOrder.Id" class="btn btn-info">
-                Related Purchase Order
+            <a asp-controller="Orders" asp-action="Edit" asp-route-id="@Model.Order.Id" class="btn btn-info">
+                Related Order
             </a>
         </div>
         <br />
-        <a asp-controller="Transfers" asp-action="Index" class="btn btn-light">
+        <a asp-controller="Donations" asp-action="Index" class="btn btn-light">
             Go Back
         </a>
     </div>
