--- a/Sheaft.Web.Manage/Views/Legals/CreateLegalConsumer.cshtml
+++ b/Sheaft.Web.Manage/Views/Legals/CreateLegalConsumer.cshtml
@@ -1,19 +1,18 @@
 ﻿@model ConsumerLegalViewModel
 @{
-    ViewData["Title"] = "Consumer billing details";
+    ViewData["Title"] = "New Consumer Legals";
     var countries = ((List<CountryViewModel>)ViewBag.Countries).Select(c => new SelectListItem(c.Name, c.Alpha2)).ToList();
     var nationalities = ((List<NationalityViewModel>)ViewBag.Nationalities).Select(c => new SelectListItem(c.Name, c.Alpha2)).ToList();
 }
 
 <div class="container">
-    <h2 class="display-4">Consumer billing details</h2>
+    <h2 class="display-4">New Consumer Legals</h2>
     <br />
 
-    @using (Html.BeginForm("UpdateLegal", "Users", FormMethod.Post))
+    @using (Html.BeginForm("CreateLegalConsumer", "Legals", FormMethod.Post))
     {
         @Html.AntiForgeryToken()
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.Id)
         @Html.HiddenFor(model => model.Owner.Id)
         <br />
 
@@ -40,6 +39,10 @@
                     @Html.LabelFor(m => m.Owner.Nationality)
                     @Html.DropDownListFor(m => m.Owner.Nationality, nationalities, new { @class = "form-control" })
                 </div>
+                <div class="form-group">
+                    @Html.LabelFor(m => m.Owner.CountryOfResidence)
+                    @Html.DropDownListFor(m => m.Owner.CountryOfResidence, countries, new { @class = "form-control" })
+                </div>
             </div>
             <div class="col-md-6">
                 <h4>Address</h4>
@@ -60,32 +63,18 @@
                     @Html.TextBoxFor(m => m.Owner.Address.City, null, new { @class = "form-control" })
                 </div>
                 <div class="form-group">
-                    @Html.LabelFor(m => m.Owner.CountryOfResidence)
-                    @Html.DropDownListFor(m => m.Owner.CountryOfResidence, countries, new { @class = "form-control" })
+                    @Html.LabelFor(m => m.Owner.Address.Country)
+                    @Html.DropDownListFor(m => m.Owner.Address.Country, countries, new { @class = "form-control" })
                 </div>
             </div>
         </div>
-        <div class="form-group">
-            @Html.LabelFor(m => m.CreatedOn)
-            @Html.TextBoxFor(m => m.CreatedOn, null, new { @class = "form-control", @disabled = "disabled" })
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(m => m.UpdatedOn)
-            @Html.TextBoxFor(m => m.UpdatedOn, null, new { @class = "form-control", @disabled = "disabled" })
-        </div>
-        @if (Model.RemovedOn.HasValue)
-        {
-            <div class="form-group">
-                @Html.LabelFor(m => m.RemovedOn)
-                @Html.TextBoxFor(m => m.RemovedOn, null, new { @class = "form-control", @disabled = "disabled" })
-            </div>
-        }
+
         <br />
         <a asp-controller="Consumers" asp-action="Edit" asp-route-id="@Model.Owner.Id" class="btn btn-light">
             Cancel
         </a>
         <button type="submit" class="btn btn-success">
-            <i class="fa fa-check">&nbsp;Save</i>
+            <i class="fa fa-check">&nbsp;Create</i>
         </button>
     }
 
