--- a/Sheaft.Web.Manage/Views/Orders/Index.cshtml
+++ b/Sheaft.Web.Manage/Views/Orders/Index.cshtml
@@ -10,19 +10,6 @@
     <h2 class="display-5">Orders</h2>
     <br />
 
-    @if (ViewBag.Edited != null)
-    {
-        <div class="alert alert-success alert-dismissible fade show" role="alert">
-            <span>Successfully updated order @ViewBag.Edited.Name</span>
-            <a asp-controller="Orders" asp-action="Details" asp-route-id="@ViewBag.Edited.Id">View details</a>
-
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-            </button>
-        </div>
-        <br />
-    }
-
     <div class="btn-group">
         <label class="btn btn-secondary @(status == null ? "active": "")">
             <a asp-controller="Orders" asp-action="Index" asp-route-kind="" asp-route-take="@take" asp-route-page="@currentPage" class="text-white">All</a>
@@ -66,7 +53,7 @@
                     <td>@entity.Donate€</td>
                     <td>@entity.FeesPrice€</td>
                     <td>
-                        <a asp-controller="Orders" asp-action="Details" asp-route-id="@entity.Id" class="btn btn-info">
+                        <a asp-controller="Orders" asp-action="Edit" asp-route-id="@entity.Id" class="btn btn-info">
                             <i class="fa fa-eye"></i>
                         </a>
                     </td>
