--- a/Sheaft.Web.Manage/Views/Payins/Edit.cshtml
+++ b/Sheaft.Web.Manage/Views/Payins/Edit.cshtml
@@ -1,10 +1,10 @@
-﻿@model DonationViewModel
+﻿@model PayinViewModel
 @{
-    ViewData["Title"] = "Donation details";
+    ViewData["Title"] = "Payin details";
 }
 
     <div class="container">
-        <h2 class="display-4">Donation details</h2>
+        <h2 class="display-4">Payin details</h2>
         <br />
         <br />
         <div class="form-group">
@@ -55,12 +55,12 @@
             @Html.TextBoxFor(m => m.Order.Status.ToString("G"), null, new { @class = "form-control", @disabled = "disabled" })
         </div>
         <div class="form-group">
-            <a asp-controller="Orders" asp-action="Details" asp-route-id="@Model.Order.Id" class="btn btn-info">
+            <a asp-controller="Orders" asp-action="Edit" asp-route-id="@Model.Order.Id" class="btn btn-info">
                 Related Order
             </a>
         </div>
         <br />
-        <a asp-controller="Donations" asp-action="Index" class="btn btn-light">
+        <a asp-controller="Payins" asp-action="Index" class="btn btn-light">
             Go Back
         </a>
     </div>
