--- a/Sheaft.Web.Manage/Views/Payouts/Edit.cshtml
+++ b/Sheaft.Web.Manage/Views/Payouts/Edit.cshtml
@@ -82,10 +82,10 @@
                     <td>@transfer.PurchaseOrder.TotalOnSalePrice€</td>
                     <td>@transfer.PurchaseOrder.Status</td>
                     <td>
-                        <a asp-controller="Transfer" asp-action="Details" asp-route-id="@transfer.Id" class="btn btn-info">
+                        <a asp-controller="Transfer" asp-action="Edit" asp-route-id="@transfer.Id" class="btn btn-info">
                             <i class="fa fa-eye"></i>
                         </a>
-                        <a asp-controller="PurchaseOrders" asp-action="Details" asp-route-id="@transfer.PurchaseOrder.Id" class="btn btn-info">
+                        <a asp-controller="PurchaseOrders" asp-action="Edit" asp-route-id="@transfer.PurchaseOrder.Id" class="btn btn-info">
                             <i class="fa fa-money-bill"></i>
                         </a>
                     </td>
