--- a/Sheaft.Web.Manage/Views/Producers/Edit.cshtml
+++ b/Sheaft.Web.Manage/Views/Producers/Edit.cshtml
@@ -105,13 +105,13 @@
                 <h4>Legals</h4>
                 @if (ViewBag.LegalsId != null)
                 {
-                    <a asp-controller="Producers" asp-action="UpdateLegal" asp-route-legalId="@ViewBag.LegalsId" class="btn btn-info">
+                    <a asp-controller="Legals" asp-action="EditLegalBusiness" asp-route-id="@ViewBag.LegalsId" class="btn btn-info">
                         Legals details
                     </a>
                 }
                 else
                 {
-                    <a asp-controller="Producers" asp-action="CreateLegals" asp-route-userId="@Model.Id" class="btn btn-info">
+                    <a asp-controller="Legals" asp-action="CreateLegalBusiness" asp-route-userId="@Model.Id" class="btn btn-info">
                         Create Legals
                     </a>
                 }
@@ -120,13 +120,13 @@
                 <h4>BankAccount</h4>
                 @if (ViewBag.BankAccountId != null)
                 {
-                    <a asp-controller="Producers" asp-action="UpdateBankAccount" asp-route-bankAccountId="@ViewBag.BankAccountId" class="btn btn-info">
+                    <a asp-controller="BankAccounts" asp-action="Edit" asp-route-id="@ViewBag.BankAccountId" class="btn btn-info">
                         Bank Account details
                     </a>
                 }
                 else
                 {
-                    <a asp-controller="Producers" asp-action="CreateBankAccount" asp-route-userId="@Model.Id" class="btn btn-info">
+                    <a asp-controller="BankAccounts" asp-action="Create" asp-route-userId="@Model.Id" class="btn btn-info">
                         Create Bank Account
                     </a>
                 }
