--- a/Sheaft.Web.Manage/Views/BankAccounts/Edit.cshtml
+++ b/Sheaft.Web.Manage/Views/BankAccounts/Edit.cshtml
@@ -8,7 +8,7 @@
     <h2 class="display-4">Update producer bank account</h2>
     <br />
 
-    @using (Html.BeginForm("UpdateBankAccount", "Producers", FormMethod.Post))
+    @using (Html.BeginForm("Edit", "BankAccounts", FormMethod.Post))
     {
         @Html.AntiForgeryToken()
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
